# fierce

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  fierce.py  nose2.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  main.yml
fierce/: fierce.py
fierce/lists/: __init__.py
lists/: 20000.txt  5000.txt  default.txt
scripts/: fierce.pl
tests/: test_fierce.py  test_filesystem.py
