[tool.poetry]
name = "fierce"
version = "1.5.0"
description = "A DNS reconnaissance tool for locating non-contiguous IP space."
authors = []
license = "GPLv3"
readme = "README.md"
repository = "https://github.com/mschwager/fierce"
homepage = "https://github.com/mschwager/fierce"
packages = [{include = "fierce"}]
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Security',
]

[tool.poetry.dependencies]
python = "^3.8"
dnspython = "1.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "6.2.5"
pytest-cov = "3.0.0"
flake8 = "3.7.7"
pyfakefs = "5.6.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.scripts]
fierce = "fierce.fierce:main"

[tool.coverage.run]
source = ["fierce"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
